[gd_scene load_steps=24 format=2]

[ext_resource path="res://Scenes/Characters/Particles/DeathParticles.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Level/LaserGenerators/LaserGenerator_I/LaserGenerator_I_Up.png" type="Texture" id=2]
[ext_resource path="res://Assets/Level/LaserGenerators/LaserGenerator_I/LaserGenerator_I_Down.png" type="Texture" id=3]
[ext_resource path="res://Assets/Level/LaserGenerators/LaserGenerator_I/LaserGenerator_I_Left.png" type="Texture" id=4]
[ext_resource path="res://Assets/Level/LaserGenerators/LaserGenerator_I/LaserGenerator_I_Right.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Level/Enemy Environments/Static Turret/Sc_StaticTurret.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Weapons/Weapons/Enemy Weapons/Sc_Weapon_BasicEnemy.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Level/LaserGenerators/BunkerTurret/Neutral/LaserGenerator_I_Up.png" type="Texture" id=8]
[ext_resource path="res://Assets/Level/LaserGenerators/BunkerTurret/Neutral/LaserGenerator_I_Left.png" type="Texture" id=9]
[ext_resource path="res://Assets/Level/LaserGenerators/BunkerTurret/Red/LaserGenerator_I_Right.png" type="Texture" id=10]
[ext_resource path="res://Assets/Level/LaserGenerators/BunkerTurret/Red/LaserGenerator_I_Up.png" type="Texture" id=11]
[ext_resource path="res://Assets/Level/LaserGenerators/BunkerTurret/Neutral/LaserGenerator_I_Right.png" type="Texture" id=12]
[ext_resource path="res://Assets/Level/LaserGenerators/BunkerTurret/Red/LaserGenerator_I_Down.png" type="Texture" id=13]
[ext_resource path="res://Assets/Level/LaserGenerators/BunkerTurret/Neutral/LaserGenerator_I_Down.png" type="Texture" id=14]
[ext_resource path="res://Assets/Level/LaserGenerators/BunkerTurret/Red/LaserGenerator_I_Left.png" type="Texture" id=15]
[ext_resource path="res://Assets/Level/LaserGenerators/BunkerTurret/Blue/LaserGenerator_I_Down.png" type="Texture" id=16]
[ext_resource path="res://Assets/Level/LaserGenerators/BunkerTurret/Blue/LaserGenerator_I_Up.png" type="Texture" id=17]
[ext_resource path="res://Assets/Level/LaserGenerators/BunkerTurret/Blue/LaserGenerator_I_Left.png" type="Texture" id=18]
[ext_resource path="res://Assets/Level/LaserGenerators/BunkerTurret/Blue/LaserGenerator_I_Right.png" type="Texture" id=19]
[ext_resource path="res://Scenes/VFX/FrozenFeedBack.tscn" type="PackedScene" id=20]
[ext_resource path="res://Assets/Characters/Player/player_shadow_player.png" type="Texture" id=21]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 19 ), ExtResource( 16 ), ExtResource( 18 ), ExtResource( 17 ) ],
"loop": true,
"name": "Blue",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 2 ) ],
"loop": true,
"name": "Lasers",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 14 ), ExtResource( 9 ), ExtResource( 8 ) ],
"loop": true,
"name": "Neutral",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 13 ), ExtResource( 15 ), ExtResource( 11 ) ],
"loop": true,
"name": "Red",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 25.5 )

[node name="StaticTurret" type="StaticBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 6 )
lookDirection = 2
health = 99999.0
weaponScene = ExtResource( 7 )
deathParticles = ExtResource( 1 )

[node name="Spriteholder" type="AnimatedSprite" parent="."]
scale = Vector2( 0.12, 0.12 )
frames = SubResource( 2 )
animation = "Blue"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7.5 )
shape = SubResource( 1 )

[node name="ShotRotator" type="Position2D" parent="."]
position = Vector2( 0, -18 )
__meta__ = {
"_gizmo_extents_": 5.0
}

[node name="WeaponSlot" type="Position2D" parent="ShotRotator"]
position = Vector2( 18, 0 )
__meta__ = {
"_gizmo_extents_": 5.0
}

[node name="FrozenFeedback" parent="." instance=ExtResource( 20 )]
visible = false

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0, -22 )
z_index = -4
texture = ExtResource( 21 )
